# zString

./: .gitignore  LICENSE  README.adoc  README.md  a.out  a.out.core  doxyfile  test.c  zChrSearch.h  zchrsearch.h  zstring.h  zstring_ltrim.h  zstring_remove_chr.h  zstring_replace_chr.h  zstring_replace_str.h  zstring_rtrim.h  zstring_search_chr.h  zstring_strtok.h  zstring_strtok_dquotes.h  zstring_trim.h  zstrrep.h  zstrrmv.h  zstrtok.h  zstrtok_dquotes.h
doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  files_dup.js  globals.html  globals_func.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  zrepchr_8h.html  zrepchr_8h.js  zrepchr_8h_source.html  zrepstr_8h.html  zrepstr_8h.js  zrepstr_8h_source.html  zrmvchr_8h.html  zrmvchr_8h.js  zrmvchr_8h_source.html  zstrchr_8h.html  zstrchr_8h.js  zstrchr_8h_source.html  zstring_8h.html  zstring_8h.js  zstring_8h_source.html  zstrsub_8h_source.html  zstrtok_8h.html  zstrtok_8h.js  zstrtok_8h_source.html  zstrtok__d_8h_source.html  zstrtrm_8h.html  zstrtrm_8h.js  zstrtrm_8h_source.html  zstrtrm__l_8h.html  zstrtrm__l_8h.js  (+7 more)
src/: CMakeLists.txt  zrepchr.h  zrepstr.h  zrmvchr.h  zstrchr.h  zstring.h  zstring_ltrim.h  zstring_remove_chr.h  zstring_replace_chr.h  zstring_replace_str.h  zstring_rtrim.h  zstring_search_chr.h  zstring_strtok.h  zstring_strtok_dquotes.h  zstrsub.h  zstrtok.h  zstrtok_d.h  zstrtrm.h  zstrtrm_l.h  zstrtrm_r.h  zsubstr.h
test/: CMakeLists.txt  zstringtest.c
v1.1/: README.md  zreadmemoryfile.h  zstring.h  zstrtok.h
v1.2/: README.md  zchrsearch.h  zfiletomemory.h
(+14 files in other folders)
